# dbm

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx  main.tsx  reduxStore.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: errors.rs  main.rs  main.sql  rs2js.rs  tauri_commands.rs
src-tauri/src/database/: database.rs  managers.rs  mod.rs  structures.rs
src-tauri/src/discord/: mod.rs  native_functions.rs  runner.rs
src-tauri/src/lang/: lexer.rs  mod.rs  nodes.rs  parser.rs  runtime.rs  scope.rs  values.rs
src/components/: BotController.tsx  Button.tsx  Container.tsx  HeaderText.tsx  HiddenDiv.tsx  Icon.tsx  Input.tsx  PageContainer.tsx  Sidebar.tsx  Topbar.tsx
src/components/models/: ModelManager.tsx  modelTemplates.tsx
src/css/: main.css  models.css  sidebar.css
src/pages/: BotList.tsx  BotSettings.tsx  Commands.tsx  CreateBot.tsx  Home.tsx
src/stores/: bots.ts  commands.ts  options.ts  runningBots.ts
src/types/: structures.ts  tauri.ts
